strength bar still not showing for strong password, Learn more section doesnt show on home page anymore

--- a/site.html
+++ b/site.html
@@ -154,7 +154,7 @@
 
 <!-- TODO add Learn More tab in nav bar which displays the below. change id to 'learnMore' add a statement to direct user to learn more from pre login home page. post login should display greeting and direct them to available options/ display some placeholder  -->
 <!-- POST LOGIN home section -->
-<section id="learnMore" class="section active text-center text-white align-items-center mt-3" style="background: #4A90E2; padding-top: 5rem;">
+<section id="learnMore" class="section text-center text-white align-items-center mt-3" style="background: #4A90E2; padding-top: 5rem;">
     <div class="container">
         <h1 class="display-4"> <strong>Welcome!</strong> </h1>
         <h3 class="lead">What does PasswordHaven provide you?</h3>
