home section Post login now showing

--- a/site.html
+++ b/site.html
@@ -152,12 +152,20 @@
     </div>
 </div>
 
-<!-- TODO add Learn More tab in nav bar which displays the below. change id to 'learnMore' add a statement to direct user to learn more from pre login home page. post login should display greeting and direct them to available options/ display some placeholder  -->
-<!-- POST LOGIN home section -->
+<!-- post login home section --->
+<section id="homeSectionPostLogin" class="section text-center text-black align-items-center mt-2" style="background: lightskyblue; padding-top: 5rem">
+    <div class="container">
+        <h3 class="display-4">Welcome back to PasswordHaven!</h3>
+        <h4 class="lead">You can view your accounts, add an account, delete an account or learn more about Password Haven.</h4>
+        <h4 class="lead">Happy password managing!</h4>
+    </div>
+</section>
+
+
+<!-- learn more section -->
 <section id="learnMore" class="section text-center text-white align-items-center mt-3" style="background: #4A90E2; padding-top: 5rem;">
     <div class="container">
-        <h1 class="display-4"> <strong>Welcome!</strong> </h1>
-        <h3 class="lead">What does PasswordHaven provide you?</h3>
+        <h1 class="display-4"> <strong>What does PasswordHaven provide you?</strong> </h1>
         <ul>
             <li>PasswordHaven allows you to securely store and manage your login credentials for different websites, giving you full control to view, edit, and delete them whenever needed.</li>
             <li>If you need a strong password, PasswordHaven can instantly generate a random, highly secure password to help protect your accounts from breaches.</li>
