--- a/site.html
+++ b/site.html
@@ -83,6 +83,8 @@
     <h2 class = "text-center mb-4">New account form</h2>
     <p class="lead text-center mb-5">Please fill all the forms below to add your account .</p>
     <div class = "container mt-3">
+        <label>Site name:</label>
+        <input type="text" id="siteName" class="form-control">
         <label>Website URL:</label>
         <input type="url" id="enteredWebsite" class="form-control">
         <label>Email/username:</label>
@@ -96,8 +98,6 @@
         <label>Confirm Password:</label>
         <input type="password" id="confirmPassword" class="form-control">
         <small id="confirmPasswordMsg" class="form-text text-muted"></small>
-        <label>Date of account creation:</label>
-        <input type="date" id="enteredDate" class="form-control">
         <p id="accountAddMsg" class="mt-2 text-danger"></p>
     </div>
     <div class = "modal-footer">
@@ -176,6 +176,8 @@
     </div>
 </section>
 
+<!--delete accounts section-->
+
 <!-- View accounts section-->
 <section id="viewAccounts" class = "section container mt-5">
     <h2 class="text-center mb-4">Your Stored Accounts</h2>
@@ -186,42 +188,7 @@
         <div class = "col-4">Credentials</div>
 
     </div>
-    <!-- accounts list vertical-->
-    <div class="row">
-        <div class="col-12 mb-3">
-            <div class="row align-items-center">
-                <div class="col-4 fw bold">Instagram</div>
-                <div class="col-4 text-center">01-07-2024</div>
-                <div class="col-4 text-center">
-                    <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-12 mb-3">
-            <div class="row align-items-center">
-                <div class="col-4 fw bold">LinkedIn</div>
-                <div class="col-4 text-center">03-17-2022</div>
-                <div class="col-4 text-center">
-                    <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-12 mb-3">
-            <div class="row align-items-center">
-                <div class="col-4 fw bold">GitHub</div>
-                <div class="col-4 text-center">11-27-2024</div>
-                <div class="col-4 text-center">
-                    <a href="#" class="btn btn-primary btn-sm">View Credentials</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div id="accountsList"></div>
 </section>
 
 <!--standard Footer -->
