site name, "username", "password", eye buttons, edit and delete buttons show, but alignment is incorrect. next to username is "[object Object]" and next to password is "******". Eye buttons dont work upon clicking. Edit button does make username and password text editable, but shows the date added for password in input field. Edit button does change to save though.

--- a/site.html
+++ b/site.html
@@ -107,7 +107,7 @@
 
 
 <!-- successful account addition section to be shown after addAccount-->
-<section id="accountSuccessfulAddMsg" class="section container mt-3">
+<section id="accountSuccessfulAddMsg" class="section container align-items-center mt-3">
     <h2 class = "text-success-center mb-4">Account successfully added!</h2>
     <p class="lead text-center mb-5">Thank you for using PasswordHaven! This account was successfully added to the password Manager.</p>
     <p class="lead text-center mb-5">You can view, edit, or delete it when you click "View Accounts" in the navigation bar above.</p>
@@ -181,24 +181,13 @@
 <!--view accounts section-->
 <section id="viewAccounts" class = "section container mt-5">
     <h2 class="text-center mb-4">Your Stored Accounts</h2>
-    <!-- headers for the table-->
-    <div class = "row text-center fw bold border-bottom pb-2 row-header">
-        <div class = "col-2">Account</div>
-        <div class = "col-2">Date Added</div>
-        <div class = "col-2">User Id</div>
-        <div class = "col-2">Password</div>
-        <div class = "col-2">Edit</div>
-        <div class = "col-2">Delete</div>
-
-    </div>
-    <div id="1" class = "row text-center fw bold border-bottom pb-2 row-value">
-        <div id="a-1" class = "col-2">Account</div>
-        <div id="d-1" class = "col-2">Date Added</div>
-        <div id="u-1" class = "col-2">User Id</div>
-        <div id="p-1" class = "col-2">Password</div>
-        <div id="e-1" class = "col-2">Edit</div>
-        <div id="del-1" class = "col-2">Delete</div>
-
+    <div class="row text-center fw bold border-bottom pb-2 row-header">
+        <div class="col-2">Account</div>
+        <div class="col-2">Date Added</div>
+        <div class="col-2">User Id</div>
+        <div class="col-2">Password</div>
+        <div class="col-2">Edit</div>
+        <div class="col-2">Delete</div>
     </div>
     <div id="accountsList"></div>
 </section>
