reprogrammed encryption and decryption methods which are now separate from accounts class-- successful! password strength and confirm password live message successful again. accounts are displaying properly in view accounts. added function to make masterKey which is used in encrypting and decrypting. rewrote how accounts list is being stored in LS so that it is stored against the user id. Need to re-add functionality for edit/save btn, delete btn, and eye icon btn.

--- a/site.html
+++ b/site.html
@@ -180,15 +180,19 @@
 
 <!--view accounts section-->
 <section id="viewAccounts" class = "section container mt-5">
+    <!-- title -->
     <h2 class="text-center mb-4">Your Stored Accounts</h2>
     <div class="row text-center fw bold border-bottom pb-2 row-header">
-        <div class="col-2">Account</div>
-        <div class="col-2">Date Added</div>
-        <div class="col-2">User Id</div>
-        <div class="col-2">Password</div>
-        <div class="col-2">Edit</div>
-        <div class="col-2">Delete</div>
+       <!-- column headers -->
+        <div class="col-2"> <strong>Account</strong></div>
+        <div class="col-2"> <strong>Date Added</strong></div>
+        <div class="col-2"><strong>User Id </strong></div>
+        <div class="col-2"><strong>Password</strong></div>
+        <div class="col-2"><strong>Edit</strong></div>
+        <div class="col-2"><strong>Delete</strong></div>
     </div>
+    <!-- this is where my account details are being populated onto the DOM -->
+    <!-- see script.js :338 --->
     <div id="accountsList"></div>
 </section>
 
