--- a/site.html
+++ b/site.html
@@ -102,7 +102,8 @@
     </div>
     <div class = "modal-footer">
         <button class="btn btn-primary" onclick="PasswordManager.addAccount()">Add account</button>
-    </div> <!-- TODO change this section to mimic home page section without blue background and have button for add account modal!-->
+        <button class="btn btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#generatePasswordModal" onclick="PasswordGenerator.generatePassword()">Generate Password</button>
+    </div>
 </section>
 
 
