--- a/site.html
+++ b/site.html
@@ -11,6 +11,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <style>
         /*hiding all sections by default*/
         .section { display: none; }
@@ -105,14 +106,27 @@
         <input type="url" id="url" class="form-control">
         <label>Email/username:</label>
         <input type="username" id="username" class="form-control">
+
         <label>Password:</label>
-        <input type="password" id="password" class="form-control" oninput="displayPasswordStrength()">
+        <div class="input-group mb-3">
+            <input type="password" id="password" class="form-control" oninput="displayPasswordStrength()">
+            <button class="btn btn-outline-secondary" type="button" id="togglePassword"> <i class="bi bi-eye"></i>
+            </button>
+        </div>
+
+        <!-- password strength bar -->
         <div class="progress mt-2">
             <div id="passwordStrengthBar" class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <small id="passwordStrengthIndicator" class="form-text text-muted"></small>
+
+        <!-- confirm password group -->
         <label>Confirm Password:</label>
-        <input type="password" id="confirmPassword" class="form-control">
+        <div class="input-group mb-3">
+            <input type="password" id="confirmPassword" class="form-control">
+            <button class="btn btn-outline-secondary" type="button" id="toggleConfirmPassword"> <i class="bi bi-eye"></i>
+            </button>
+        </div>
         <small id="confirmPasswordMsg" class="form-text text-muted"></small>
         <p id="accountAddMsg" class="mt-2 text-danger"></p>
     </div>
