--- a/site.html
+++ b/site.html
@@ -9,9 +9,11 @@
     <!-- linking js code file -->
     <script src ="script.js"></script>
 
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+
     <style>
         /*hiding all sections by default*/
         .section { display: none; }
@@ -32,6 +34,8 @@
                 <li class="nav-item"><a class="nav-link" href="#" onclick="showSection('learnMore')">Learn More</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" onclick="PasswordManager.displayAccounts()">View Accounts</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" onclick="checkUserLoggedIn('accountAdd')">Add Account</a></li>
+                <li id="myProfileID" class="nav-item" style="display: none;">
+                    <a class="nav-link" href="#" onclick="checkUserLoggedIn('ProfileSection')">My Profile</a></li>
                 <li id="logoutId" class="nav-item" style="display: none;">
                     <a class="nav-link" href="#" onclick="checkUserLoggedIn('logoutSectionId')">Logout</a>
                 </li>
@@ -45,34 +49,34 @@
     <div class="container">
         <h1 class="display-4">Secure Your Passwords with PasswordHaven</h1>
         <p class="lead">The safest and easiest way to manage your passwords and accounts.</p>
-        <button class="btn btn-light btn-lg mt-3" data-bs-toggle="modal" data-bs-target="#createPHAccountModal">Create Account</button>
+        <button class="btn btn-light btn-lg mt-3" onclick="showSection('signUpSection')">Create Account</button>
         <button class="btn btn-light btn-lg mt-3" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
     </div>
 </section>
 
-<!-- create passwordHaven account modal pop up-->
-<div class="modal fade" id="createPHAccountModal" tabindex="-1">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="createPHAccountModalLabel">Create PasswordHaven account</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <label>Email/username:</label>
-                <input type="email" id="signUpEmail" class="form-control">
-                <label>Password:</label>
-                <input type="password" id="signUpPassword" class="form-control">
-                <p id="signUpMsg" class="mt-2 text-danger"></p>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#generatePasswordModal" onclick="PasswordGenerator.generatePassword()">Generate Password</button>
-                <button class="btn btn-primary" onclick="User.handleSignUp()"> Create PasswordHaven Account</button>
+<!--&lt;!&ndash; create passwordHaven account modal pop up&ndash;&gt;-->
+<!--<div class="modal fade" id="createPHAccountModal" tabindex="-1">-->
+<!--    <div class="modal-dialog">-->
+<!--        <div class="modal-content">-->
+<!--            <div class="modal-header">-->
+<!--                <h5 class="modal-title" id="createPHAccountModalLabel">Create PasswordHaven account</h5>-->
+<!--                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
+<!--            </div>-->
+<!--            <div class="modal-body">-->
+<!--                <label>Email/username:</label>-->
+<!--                <input type="email" id="signUpEmail" class="form-control">-->
+<!--                <label>Password:</label>-->
+<!--                <input type="password" id="signUpPassword" class="form-control">-->
+<!--                <p id="signUpMsg" class="mt-2 text-danger"></p>-->
+<!--            </div>-->
+<!--            <div class="modal-footer">-->
+<!--                <button class="btn btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#generatePasswordModal" onclick="PasswordGenerator.generatePassword()">Generate Password</button>-->
+<!--                <button class="btn btn-primary" onclick="User.handleSignUp()"> Create PasswordHaven Account</button>-->
 
-            </div>
-        </div>
-    </div>
-</div>
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 <!-- logout section -->
 <section id="logoutSectionId" class="section text-center text-black align-items-center mt-2" style="background: #d3e7ef; padding-top: 5rem;">
@@ -136,6 +140,58 @@
     </div>
 </section>
 
+<!-- sign up page section-->
+<section id="signUpSection" class="section container mt-3">
+    <h2 class = "text-center mb-4"> <strong> Create an Account</strong></h2>
+    <p class="lead text-center mb-5">To create your master account, enter the following details.</p>
+    <div class = "container mt-3">
+        <!--Basic Info-->
+        <label><strong>First Name:</strong></label>
+        <input type="text" id="userFirstname" class="form-control">
+        <label><strong>Last Name:</strong></label>
+        <input type="text" id="userLastName" class="form-control">
+        <label><strong>Birthday:</strong></label>
+        <input type="date" id="userBirthday" class="form-control">
+        <label for="gender">Gender:</label>
+        <select id="userGender" name="gender">
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
+            <option value="Non-binary">Non-binary</option>
+            <option value="NoAnswer">Prefer not to say</option>
+        </select>
+
+        <!--Credentials-->
+        <label><strong>Email:</strong></label>
+        <input type="email" id="signUpEmail" class="form-control">
+        <label><strong>Password:</strong></label>
+        <div class="input-group mb-3">
+            <input type="password" id="signUpPassword" class="form-control" oninput="PasswordStrength.displayPasswordStrength()">
+            <button class="btn btn-outline-secondary" type="button" id="togglePwd"> <i class="bi bi-eye"></i>
+            </button>
+        </div>
+
+        <!-- password strength bar -->
+        <div class="progress mt-2">
+            <div id="pwdStrengthBar" class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <small id="pwdStrengthIndicator" class="form-text text-muted"></small>
+
+        <!-- confirm password group -->
+        <label><strong>Confirm Password:</strong></label>
+        <div class="input-group mb-3">
+            <input type="password" id="confirmMasterPassword" class="form-control">
+            <button class="btn btn-outline-secondary" type="button" id="toggleConfirmPwd"> <i class="bi bi-eye"></i>
+            </button>
+        </div>
+        <small id="confirmPwdMsg" class="form-text text-muted"></small>
+        <p id="signUpMsg" class="mt-2 text-danger"></p>
+    </div>
+    <div class = "modal-footer">
+        <button class="btn btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#generatePasswordModal" onclick="PasswordGenerator.generatePassword()">Generate Password</button>-->
+        <button class="btn btn-primary" onclick="User.handleSignUp()">rCreate PasswordHaven Account</button>
+    </div>
+</section>
+
 
 <!-- successful account addition section to be shown after addAccount-->
 <section id="accountSuccessfulAddMsg" class="section text-center align-items-center mt-3">
@@ -195,6 +251,42 @@
     </div>
 </section>
 
+<section id="ProfileSection" class="section container text-black mt-3" style="background: #fefeff; padding-top: 2rem;">
+    <div class="text-center mb-4">
+        <div class="editable-image-container mx-auto mb-2" style="position: relative; width: 150px;">
+            <img id="profileImg" class="editable-img rounded-circle" src="img/defaultAvatar.png" alt="Profile Picture" style="width: 150px; height: 150px; object-fit: cover;">
+            <input type="file" name="file" id="imageUpload" accept="image/*" hidden>
+            <label for="imageUpload" class="edit-icon position-absolute bottom-0 end-0 bg-white p-1 rounded-circle shadow" title="Change Image">✏️</label>
+        </div>
+        <h3><strong>Your Account</strong></h3>
+    </div>
+
+    <!-- Basic Info -->
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <h5 class="fw-bold text-start">Basic Information</h5>
+            <hr class="mb-3">
+
+            <!-- Info Rows-->
+            <div class="mb-2 d-flex">
+                <div class="fw-semibold me-2" style="min-width: 100px;">First Name:</div>
+                <div id="firstName"></div>
+            </div>
+            <div class="mb-2 d-flex">
+                <div class="fw-semibold me-2" style="min-width: 100px;">Last Name:</div>
+                <div id="lastName"></div>
+            </div>
+            <div class="mb-2 d-flex">
+                <div class="fw-semibold me-2" style="min-width: 100px;">Birthday:</div>
+                <div id="birthday"></div>
+            </div>
+            <div class="mb-4 d-flex">
+                <div class="fw-semibold me-2" style="min-width: 100px;">Gender:</div>
+                <div id="gender"></div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!-- learn more section -->
 <section id="learnMore" class="section text-center text-white align-items-center mt-3" style="background: #4A90E2; padding-top: 5rem;">
